# geo-mobility-velib-idf

./: .env.example  .gitignore  README.md  Readme.md  docker-compose-Airflow.yml  docker-compose-Superset.yml  docker-compose.back  docker-compose.dbt.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
airflow/: Dockerfile
airflow/dags/: test_dag.py  velib_dbt_transform.py  velib_ingestion_dag.py
airflow/extract_Velib_API/: velib_client.py  velib_parser.py
airflow/ingest_Velib_API/: db_connect.py  ingest_station_SCD2.py  ingest_station_status.py
airflow/ingestion/: velib_client.py  velib_loader.py  velib_parser.py
airflow/init_script/: init_airflow.backup  init_airflow.sh
airflow/init_script/Postgis/: Postgis_entrypoint.sh  init_staging.sh
computing_geoassets/: Computing_pop.py  Generating_building_db.py  Geospatial_clustering.py  generating_pop_data.py  reducting_pop_to_idf.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/: sources.yml
dbt/models/sources/: src_add_assets_communes_idf.yml  src_add_assets_pop_communes_idf.yml  src_add_assets_pop_pointwise.yml  src_raw_station_scd.yml  src_raw_station_status.yml
dbt/models/staging/: stg_communes_idf.sql  stg_geo_communes_idf.sql  stg_geo_pop_communes.sql  stg_geo_pop_idf.sql  stg_pop_communes.sql  stg_velib_station_current.sql  stg_velib_station_historical.sql  (+4 more)
dbt/run_scripts/: run_dbt.sh
postgis/additional_assets/: Dockerfile  communes_Idf.gpkg  import_assets.py  pop_commune_Idf.gpkg
postgis/init_script/: 01_Postgis_init.sh
superset/: Dockerfile  superset_config.py
(+4 files in other folders)
