[project]
name = "idfm-geo-mobilite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "geopandas>=1.1.2",
    "idna==3.11",
    "iniconfig==2.3.0",
    "matplotlib>=3.10.8",
    "packaging==25.0",
    "pluggy==1.6.0",
    "pygments==2.19.2",
    "pytest==9.0.2",
    "requests==2.32.5",
    "scikit-learn>=1.8.0",
    "urllib3==2.6.3",
    "uv==0.9.24",
]
